Fix design bug where line height was too large for headings

--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -5,6 +5,9 @@
 * {
     margin: 0;
     padding: 0;
+}
+
+p {
     line-height: 1.5;
 }
 
